<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar_detail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_banner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:tintMode="multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/dim"
            tools:ignore="ContentDescription"
            tools:src="?attr/colorPrimaryVariant" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="32dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp" />

        <ImageView
            android:id="@+id/icon_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_share_white"
            app:layout_constraintEnd_toEndOf="@id/img_banner"
            app:layout_constraintTop_toTopOf="@id/img_banner"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="@color/text_background"
            android:fontFamily="sans-serif-light"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@id/img_banner"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toTopOf="@id/img_banner"
            app:layout_constraintVertical_bias="1.0"
            tools:text="@string/text_quote" />

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="150dp"
            android:layout_height="225dp"
            android:layout_marginStart="32dp"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_rounded_background"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="@id/img_banner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/img_banner"
            app:layout_constraintTop_toBottomOf="@id/guideline1"
            tools:ignore="ContentDescription"
            tools:src="?attr/colorPrimaryVariant" />

        <ImageView
            android:id="@+id/icon_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_fire_red"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_quote"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@id/icon_score"
            app:layout_constraintStart_toEndOf="@id/icon_score"
            app:layout_constraintTop_toTopOf="@id/icon_score"
            tools:text="@string/nice_score" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_poster"
            tools:text="@string/movie" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="@string/genres" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/text_directed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/directed_by"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/tv_genre" />

        <TextView
            android:id="@+id/tv_director"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorOnBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/text_directed"
            tools:text="@string/director" />

        <TextView
            android:id="@+id/text_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/release_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_genre" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorOnBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_release"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/text_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/synopsis"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date" />

        <TextView
            android:id="@+id/tv_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:justificationMode="inter_word"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_synopsis"
            tools:ignore="UnusedAttribute"
            tools:text="@string/text_placeholder" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>